# wasm-snake-game

./: Cargo.toml  README.md  build.sh  index.html  index.js  package-lock.json  package.json  style.css  webpack.config.js
src/: lib.rs  snake_game.rs
