[package]
name = "wasm-snake"
version = "0.1.0"
authors = ["Dalton Russell Cole"]
edition = "2018"
rust-version = "1.57"

[lib]
crate-type = ["cdylib"]

[dependencies]
console_error_panic_hook = "0.1.7"
js-sys = "0.3.68"
wasm-bindgen = "0.2.91"

[dependencies.web-sys]
version = "0.3.4"
features = [
  'CanvasRenderingContext2d',
  'Document',
  'Element',
  'HtmlCanvasElement',
  'Node',
  'Window',
]
